# dapp-scaffold

./: .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  TODO.md  ah.json  b.json  b1.json  craco.config.js  metadata.json  next.config.js  package-lock.json  package.json  postcss.config.js  prettier.config.js  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: frontend.yml  program.yml  rust.yml
program/: .gitignore  Cargo.toml  README.md
program/src/: lib.rs
program/tests/: integration.rs
public/: CNAME  index.html  manifest.json  talk-founders-pass.webm
src/: App.less  App.test.tsx  App.tsx  ant-custom.less  index.css  index.tsx  manifest.json  routes.tsx  setupTests.ts
src/AuctionHouseComponents/: Buy.tsx  Cancel.tsx  CreateAuctionHouse.tsx  Deposit.tsx  ExecuteSell.tsx  GetAuctionHouse.tsx  Sell.tsx  Withdraw.tsx
src/actions/: README.md  account.ts
src/api/: index.ts  package-lock.json  package.json  tsconfig.json
src/components/: AppBar.tsx  Button.tsx  Connect.tsx  ContentContainer.tsx  CreateNFTS.tsx  FetchNFTS.tsx  Footer.tsx  FounderBox.tsx  Getter.tsx  GetterAirdrop.tsx  GetterBalance.tsx  Icon.tsx  IllustrationCredit.js  InputsComponent.tsx  KeypairButton.tsx  MembershipFeature.tsx  Mint.tsx  NFTS.tsx  NetworkSwitcher.tsx  Notification.tsx  PurchaseTray.tsx  Rainbow.tsx  RequestAirdrop.module.css  RequestAirdrop.tsx  SayHello.js  SendTransaction.tsx  SendVersionedTransaction.tsx  Setter.tsx  ShowOracle.tsx  SignMessage.tsx  Snapshot.tsx  (+4 more)
(+93 files in other folders)
