[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.6.12"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.12"
solana-validator = "1.6.12"
solana-sdk = "1.6.12"

[lib]
crate-type = ["cdylib", "lib"]
